--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "redux": "^4.0.5"
+    "react-thunk": "^1.0.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "github:reduxjs/redux-thunk#master"
   },
   "scripts": {
     "start": "react-scripts start",
