--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-  "name": "firebase",
+  "name": "project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "react": "^16.12.0",
+    "firebase": "^7.6.2",
+    "react": "^16.7.0-alpha.2",
     "react-dom": "^16.12.0",
+    "react-firebase": "^2.2.8",
     "react-redux": "^7.1.3",
+    "react-redux-firebase": "^3.0.7",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.11.0",
     "redux-thunk": "github:reduxjs/redux-thunk#master"
   },
   "scripts": {
@@ -35,5 +39,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/twinklekhandelwal/project-with-redux-and-firebase.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/twinklekhandelwal/project-with-redux-and-firebase/issues"
+  },
+  "homepage": "https://github.com/twinklekhandelwal/project-with-redux-and-firebase#readme"
 }
