--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "firebase": "^7.6.2",
-    "react": "^16.7.0-alpha.2",
+    "firebase": "^6.2.0-0",
+    "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase": "^2.2.8",
     "react-redux": "^7.1.3",
-    "react-redux-firebase": "^3.0.7",
-    "react-router-dom": "^5.1.2",
+    "react-redux-firebase": "^2.1.8",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.3.0",
     "react-thunk": "^1.0.0",
     "redux": "^4.0.5",
-    "redux-firestore": "^0.11.0",
-    "redux-thunk": "github:reduxjs/redux-thunk#master"
+    "redux-firestore": "^0.5.7",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
